Correct wrapping of long user names in blog post author box. Fixes #3402
git-svn-id: https://buddypress.svn.wordpress.org/trunk@4887 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -984,6 +984,9 @@ div.author-box {
 	text-align: center;
 	width: 70px;
 }
+div.author-box p {
+	word-wrap: break-word;
+}
 div.author-box p,
 div.comment-avatar-box p {
 	margin: 5px 0 0;
